results/SpecGenBench/2-shot/log-PowerOfFourLoop-2023_11_28_14_59_18.txt
class PowerOfTwoLoop {
    //@ requires n > 0;
    //@ ensures \result == true <==> (\exists int i; i >= 0 && n == 4^i);
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        //@ maintaining n > 0;
        //@ decreases n;
        while (n % 4 == 0) {
            n /= 4;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfFourLoop.java:3: error: bad operand types for binary operator '^'
    //@ ensures \result == true <==> (\exists int i; i >= 0 && n == 4^i);
                                                                     ^
  first type:  boolean
  second type: int
1 error

